# ai-ops-cil

./: .gitignore  DEPLOY.md  README.md  pyproject.toml  部署教程.md
src/ai_ops/: cli.py  config.py  executor.py  llm.py  prefill.py  safety.py  system_prompt.py  utils.py
tests/: test_config.py  test_llm.py  test_safety.py
