[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-ops"
version = "0.1.0"
description = "Interactive terminal ops assistant powered by LLM"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["cli", "llm", "ops", "terminal"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

dependencies = [
    "prompt_toolkit>=3.0,<4.0",
    "httpx[http2]>=0.27,<1.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli_w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
"@ai" = "ai_ops.cli:main"
"ai-ops" = "ai_ops.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_ops"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
